<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".login.LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="26sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userid"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/edtUserId"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:hint="@string/enteruserid"
            android:padding="6dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginTop="12dp"/>

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/enterpassword"
            android:padding="6dp"
            android:singleLine="true"
            android:layout_marginTop="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnReset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                android:layout_weight=".4"
                android:background="@color/colorPrimaryDark"
                android:textColor="@android:color/white"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:layout_marginLeft="10dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/login"
                android:textColor="@android:color/white"/>

        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/register"
        android:textColor="@android:color/white"/>

</RelativeLayout>